--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -19,7 +19,9 @@
       </ul>
     </div>
     <div class="content">
+      <div class = "logo">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      </div>
       <div class="input">
         <input type="text">
       </div>
@@ -29,11 +31,11 @@
       </div>
     </div>
     <div class="footer">
-      <ul class="left-links">
+      <ul class="left-links1">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
       </ul>
-      <ul class="right-links">
+      <ul class="right-links1">
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
